fix position of article links on mobile and desktop

--- a/css/arkusz.css
+++ b/css/arkusz.css
@@ -370,6 +370,10 @@ a#various {
 	position: relative;
 }
 
+.articles__item:nth-of-type(2n) {
+	float:right;
+}
+
 .articles__link {
 	color: #191919;
 	display: inline-block;
@@ -824,6 +828,7 @@ footer p {
 @media (max-width: 730px) {
 	.articles__item {
 		width: 100%;
+		margin: 0.5rem 0;
 	}
 }
 
